Some design changes in web site,opacity

--- a/contact-us.html
+++ b/contact-us.html
@@ -20,16 +20,16 @@
   <body>
     <nav
       class="navbar fixed-top navbar-expand-lg navbar-dark bg-black"
-      style="--bs-bg-opacity: 0.5"
+      style="--bs-bg-opacity: 0.85"
     >
       <div
-        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 border-bottom"
+        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3"
       >
         <a
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
           href="index.html"
         >
-          <img src="img/euro_logo.png" width="250px" alt="" />
+          <img src="img/euro_logo_white.png" width="250px" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -295,12 +295,451 @@
           </div>
         </div>
       </section>
+
+      <section>
+        <div class="container">
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office3.jpg"
+                  class="card-img-top"
+                  alt="Maimi office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">
+                    Miami (Global Headquarters) (U.S.A.)
+                  </h4>
+                  <h6>Financial service provided by: Euro Exchange Corp.</h6>
+                  <adress class="card-text text-muted">
+                    242 NE 1st Street <br />
+                    Miami, Florida 33132 <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 8:00AM – 6:00PM <br />
+                    Saturday | 8:00AM – 5:00PM <br />
+                    Sunday | 8:00AM – 3:00PM <br />
+                    *We are closed on bank holidays and on Sundays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+13053772536"
+                      >+(1) 305 377 2536</a
+                    >
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:info@euroexchangeusa.com"
+                    >
+                      info@euroexchangeusa.com</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office2.jpg"
+                  class="card-img-top"
+                  alt="Miami office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Miami (U.S.A.)</h4>
+                  <h6>Financial service provided by: Euro Exchange Corp.</h6>
+                  <adress class="card-text text-muted">
+                    25 NE 3rd Ave <br />
+                    Miami, Florida 33132 <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 8:00AM – 6:00PM <br />
+                    Saturday | 8:00AM – 5:00PM <br />
+                    Sunday | closed <br />
+                    *We are closed on bank holidays and on Sundays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+13053772536"
+                      >+(1) 305 377 2536</a
+                    >
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:info@euroexchangeusa.com"
+                    >
+                      info@euroexchangeusa.com</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office7.png"
+                  class="card-img-top"
+                  alt="Maimi office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Miami (U.S.A.)</h4>
+                  <h6>Financial service provided by: Euro Exchange Corp.</h6>
+                  <adress class="card-text text-muted">
+                    1717 N Bayshore Dr. Suite 128 <br />
+                    Miami, Florida 33132 <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 8:00AM – 6:00PM <br />
+                    Saturday | 8:00AM – 5:00PM <br />
+                    Sunday | 8:00AM – 3:00PM <br />
+                    *We are closed on bank holidays and on Sundays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+13055778645"
+                      >+(1) 305 577 8645
+                    </a>
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:info@euroexchangeusa.com"
+                    >
+                      info@euroexchangeusa.com</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office2.jpg"
+                  class="card-img-top"
+                  alt="Miami office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Miami (U.S.A.)</h4>
+                  <h6>Financial service provided by: Euro Exchange Corp.</h6>
+                  <adress class="card-text text-muted">
+                    1717 N Bayshore Dr. Suite 128 <br />
+                    Miami, Florida 33132 <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 9:00AM – 6:00PM <br />
+                    Saturday | 9:00AM – 5:00PM <br />
+                    Sunday | 9:00AM – 3:00PM <br />
+                    *We are closed on bank holidays and on Sundays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+13055778645"
+                      >+(1) 305 577 8645
+                    </a>
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:info@euroexchangeusa.com"
+                    >
+                      info@euroexchangeusa.com</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office3.jpg"
+                  class="card-img-top"
+                  alt="Doral office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">DORAL, FL (U.S.A.)</h4>
+                  <h6>Financial service provided by: Euro Exchange Corp.</h6>
+                  <adress class="card-text text-muted">
+                    10429 NW 41st St <br />
+                    Doral, FL 33178 <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 8:00AM – 6:00PM <br />
+                    Saturday | 9:00AM – 3:00PM <br />
+                    Sunday | Closed <br />
+                    *We are closed on bank holidays and on Sundays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+13053772536"
+                      >+(1) 305 377 2536
+                    </a>
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:info@euroexchangeusa.com"
+                    >
+                      info@euroexchangeusa.com</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office1.jpg"
+                  class="card-img-top"
+                  alt="Fort Lauderdale office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Fort Lauderdale (U.S.A.)</h4>
+                  <h6>Financial service provided by: Euro Exchange Corp.</h6>
+                  <adress class="card-text text-muted">
+                    499 SE 17th Street Suite D<br />
+                    Fort Lauderdale, Florida 33316
+                    <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 8:00AM – 7:00PM <br />
+                    Saturday | 9:00AM – 5:00PM <br />
+                    Sunday | Closed <br />
+                    *We are closed on bank holidays and on Sundays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+19549002397"
+                      >+(1) 954 900 2397
+                    </a>
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:info@euroexchangeusa.com"
+                    >
+                      info@euroexchangeusa.com</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office4.jpg"
+                  class="card-img-top"
+                  alt="London office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">London (United Kingdom)</h4>
+                  <h6>
+                    Financial service provided by: Euro Exchange Securities UK
+                    Ltd.
+                  </h6>
+                  <adress class="card-text text-muted">
+                    107 Great Portland Street <br />
+                    London, W1W 6QG
+                    <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 9:00AM – 6:00PM <br />
+                    Saturday | 10:00AM – 3:00PM <br />
+                    Sunday | Closed <br />
+                    *We are closed on bank holidays and on Sundays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+442076363430"
+                      >+(44) 207 6363 430
+                    </a>
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:sac@euroexchangesecurities.co.uk"
+                    >
+                      sac@euroexchangesecurities.co.uk</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office6.jpg"
+                  class="card-img-top"
+                  alt="Madrid office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Madrid (Plaza Castilla) (Spain)</h4>
+                  <h6>
+                    Financial service provided by: Euro Trading and Financial
+                    S.A
+                  </h6>
+                  <adress class="card-text text-muted">
+                    Calle Apolonio Morales, 1<br />
+                    Madrid, España 28036
+                    <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 8:00AM – 7:00PM <br />
+                    Saturday-Sunday | Closed <br />
+                    *We are closed on bank holidays and on Sundays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+34917371728"
+                      >+(34) 91 737 17 28
+                    </a>
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:sac@euroexchangesecurities.co.uk"
+                    >
+                      sac@euroexchangesecurities.co.uk</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office5.jpg"
+                  class="card-img-top"
+                  alt="Marid office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Madrid (Callao) (Spain)</h4>
+                  <h6>
+                    Financial service provided by: Euro Trading and Financial
+                    S.A
+                  </h6>
+                  <adress class="card-text text-muted">
+                    Calle Jacometrezo, 11<br />
+                    Madrid, España 28013
+                    <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 9:00AM – 6:00PM <br />
+                    Saturday | 10:00AM – 3:00PM <br />
+                    Sunday | Closed <br />
+                    *We are closed on bank holidays and on Sundays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+34917371731"
+                      >+(34) 91 737 17 31
+                    </a>
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:sac@euroexchangesecurities.co.uk"
+                    >
+                      sac@euroexchangesecurities.co.uk</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office8.png"
+                  class="card-img-top"
+                  alt="Madrid office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Madrid (Spain)</h4>
+                  <h6>
+                    Financial service provided by: Euro Trading and Financial
+                    S.A
+                  </h6>
+                  <adress class="card-text text-muted">
+                    Calle Montera 46<br />
+                    Madrid, España 28013
+                    <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 9:00AM – 10:00PM <br />
+                    Saturday | 9:00AM – 10:00PM <br />
+                    Sunday | 9:00AM – 10:00PM <br />
+                    *We are closed on bank holidays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+34917371732"
+                      >+(34) 91 737 17 32
+                    </a>
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:sac@euroexchangesecurities.co.uk"
+                    >
+                      sac@euroexchangesecurities.co.uk</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="img/contact/office9.png"
+                  class="card-img-top"
+                  alt="Barcelona office"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Barcelona (Spain)</h4>
+                  <h6>
+                    Financial service provided by: Euro Trading and Financial
+                    S.A
+                  </h6>
+                  <adress class="card-text text-muted">
+                    499 SE 17th Street Suite D<br />
+                    Fort Lauderdale, Florida 33316
+                    <br />
+                    <br />
+                    Hours of operation: <br />
+                    Mon – Fri | 9:00AM – 10:00PM <br />
+                    Saturday | 9:00AM – 10:00PM <br />
+                    Sunday | 9:00AM – 10:00PM <br />
+                    *We are closed on bank holidays
+                  </adress>
+                  <address>
+                    <br />
+                    <a class="text-decoration-none" href="tel:+34935952147"
+                      >+(34) 93 595 21 47
+                    </a>
+                  </address>
+                  <address>
+                    <a
+                      class="text-decoration-none"
+                      href="mailto:sac@euroexchangesecurities.co.uk"
+                    >
+                      sac@euroexchangesecurities.co.uk</a
+                    >
+                  </address>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="bg-light">
       <div class="container">
         <div class="row row-col-4 py-5 mt-5 border-top">
-          <div class="col-md-3 text-center">
+          <div class="col-md-3 text-start">
             <a
               href="index.html"
               class="d-flex align-items-center mb-3 link-dark text-decoration-none"
@@ -320,7 +759,7 @@
             <p class="text-muted">&copy; 2021</p>
           </div>
 
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-start">
             <h5>Where to find us</h5>
             <div class="col-md-12">
               <p>
@@ -344,9 +783,9 @@
             </div>
           </div>
 
-          <div class="col-md-2 text-center">
+          <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex justify-content-center">
+            <ul class="list-unstyled d-flex justify-content-start">
               <li class="ms-3">
                 <a
                   class="link-dark"
@@ -372,7 +811,7 @@
             </ul>
           </div>
 
-          <div class="col-md-2 text-center">
+          <div class="col-md-2 text-start">
             <h5>Section</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
