--- a/rates.html
+++ b/rates.html
@@ -20,16 +20,16 @@
   <body>
     <nav
       class="navbar fixed-top navbar-expand-lg navbar-dark bg-black"
-      style="--bs-bg-opacity: 0.5"
+      style="--bs-bg-opacity: 0.85"
     >
       <div
-        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 border-bottom"
+        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3"
       >
         <a
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
           href="index.html"
         >
-          <img src="img/euro_logo.png" width="250px" alt="" />
+          <img src="img/euro_logo_white.png" width="250px" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -159,254 +159,254 @@
                   <tr>
                     <th scope="col">Currency Code</th>
                     <th scope="col">Country</th>
-                    <th scope="col">Currency</th>
+                    <th scope="col">USD Exchange</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <td class="fw-bold">AED</td>
                     <td>UNITED ARAB EMIRATES (THE)</td>
-                    <td>UAE Dirham</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">ARS</td>
                     <td>ARGENTINA</td>
-                    <td>Argentine Peso</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">AUD</td>
                     <td>AUSTRALIA</td>
-                    <td>Australian Dollar</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">BHD</td>
                     <td>BAHRAIN</td>
-                    <td>Bahraini Dinar</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">BRL</td>
                     <td>BRAZIL</td>
-                    <td>Brazilian Real</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">CAD</td>
                     <td>CANADA</td>
-                    <td>Canadian Dollar</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">CHF</td>
                     <td>SWITZERLAND</td>
-                    <td>Swiss Franc</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">CLP</td>
                     <td>CHILE</td>
-                    <td>Chilean Peso</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">CNY</td>
                     <td>CHINA</td>
-                    <td>Yuan Renminbi</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">COP</td>
                     <td>COLOMBIA</td>
-                    <td>Colombian Peso</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">CRC</td>
                     <td>COSTA RICA</td>
-                    <td>Costa Rican Colon</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">CZK</td>
                     <td>CZECHIA</td>
-                    <td>Czech Koruna</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">DKK</td>
                     <td>DENMARK</td>
-                    <td>Danish Krone</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">DOP</td>
                     <td>DOMINICAN REPUBLIC (THE)</td>
-                    <td>Dominican Peso</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">EUR</td>
                     <td>EUROPE</td>
-                    <td>Euro</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">GBP</td>
                     <td>BRITAIN</td>
-                    <td>Pound Sterling</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">HKD</td>
                     <td>HONG KONG</td>
-                    <td>Hong Kong Dollar</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">HRK</td>
                     <td>CROATIA</td>
-                    <td>Kuna</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">HUF</td>
                     <td>HUNGARY</td>
-                    <td>Forint</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">IDR</td>
                     <td>INDONESIA</td>
-                    <td>Rupiah</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">ILS</td>
                     <td>ISRAEL</td>
-                    <td>New Israeli Sheqel</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">INR</td>
                     <td>INDIA</td>
-                    <td>Indian Rupee</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">ISK</td>
                     <td>ICELAND</td>
-                    <td>Iceland Krona</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">JMD</td>
                     <td>JAMAICA</td>
-                    <td>Jamaican Dollar</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">JOD</td>
                     <td>JORDAN</td>
-                    <td>Jordanian Dinar</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">JPY</td>
                     <td>JAPAN</td>
-                    <td>Yen</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">KES</td>
                     <td>KENYA</td>
-                    <td>Kenyan Shilling</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">KRW</td>
                     <td>KOREA (THE REPUBLIC OF)</td>
-                    <td>Won</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">KWD</td>
                     <td>KUWAIT</td>
-                    <td>Kuwaiti Dinar</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">LKR</td>
                     <td>SRI LANKA</td>
-                    <td>Sri Lanka Rupee</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">MAD</td>
                     <td>MOROCCO</td>
-                    <td>Moroccan Dirham</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">MXN</td>
                     <td>MEXICO</td>
-                    <td>Mexican Peso</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">MYR</td>
                     <td>MALAYSIA</td>
-                    <td>Malaysian Ringgit</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">NOK</td>
                     <td>NORWAY</td>
-                    <td>Norwegian Krone</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">NZD</td>
                     <td>NEW ZEALAND</td>
-                    <td>New Zealand Dollar</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">OMR</td>
                     <td>OMAN</td>
-                    <td>Rial Omani</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">PEN</td>
                     <td>PERU</td>
-                    <td>Sol</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">PHP</td>
                     <td>PHILIPPINES (THE)</td>
-                    <td>Philippine Piso</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">PKR</td>
                     <td>PAKISTAN</td>
-                    <td>Pakistan Rupee</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">PLN</td>
                     <td>POLAND</td>
-                    <td>Zloty</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">QAR</td>
                     <td>QATAR</td>
-                    <td>Qatari Rial</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">RUB</td>
                     <td>RUSSIAN FEDERATION (THE)</td>
-                    <td>Russian Ruble</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">SAR</td>
                     <td>SAUDI ARABIA</td>
-                    <td>Saudi Riyal</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">SEK</td>
                     <td>SWEDEN</td>
-                    <td>Swedish Krona</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">SGD</td>
                     <td>SINGAPORE</td>
-                    <td>Singapore Dollar</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">THB</td>
                     <td>THAILAND</td>
-                    <td>Baht</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">TRY</td>
                     <td>TURKEY</td>
-                    <td>Turkish Lira</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">VND</td>
                     <td>VIET NAM</td>
-                    <td>Dong</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td class="fw-bold">ZAR</td>
                     <td>SOUTH AFRICA</td>
-                    <td>Rand</td>
+                    <td></td>
                   </tr>
                 </tbody>
               </table>
@@ -419,7 +419,7 @@
     <footer class="bg-light">
       <div class="container">
         <div class="row row-col-4 py-5 mt-5 border-top">
-          <div class="col-md-3 text-center">
+          <div class="col-md-3 text-start">
             <a
               href="index.html"
               class="d-flex align-items-center mb-3 link-dark text-decoration-none"
@@ -439,7 +439,7 @@
             <p class="text-muted">&copy; 2021</p>
           </div>
 
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-start">
             <h5>Where to find us</h5>
             <div class="col-md-12">
               <p>
@@ -463,9 +463,9 @@
             </div>
           </div>
 
-          <div class="col-md-2 text-center">
+          <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex justify-content-center">
+            <ul class="list-unstyled d-flex justify-content-start">
               <li class="ms-3">
                 <a
                   class="link-dark"
@@ -491,7 +491,7 @@
             </ul>
           </div>
 
-          <div class="col-md-2 text-center">
+          <div class="col-md-2 text-start">
             <h5>Section</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
