--- a/currency-exchange.html
+++ b/currency-exchange.html
@@ -20,16 +20,16 @@
   <body>
     <nav
       class="navbar fixed-top navbar-expand-lg navbar-dark bg-black"
-      style="--bs-bg-opacity: 0.5"
+      style="--bs-bg-opacity: 0.85"
     >
       <div
-        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 border-bottom"
+        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3"
       >
         <a
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
           href="index.html"
         >
-          <img src="img/euro_logo.png" width="250px" alt="" />
+          <img src="img/euro_logo_white.png" width="250px" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -169,7 +169,7 @@
               provide it. So, we kept adding onto the list, until we became your
               one-stop shop, consisting of the following services:
             </p>
-            <ul>
+            <ul class="ms-5">
               <li>Currency exchange home delivery</li>
               <li>Currency exchange</li>
               <li>International payments</li>
@@ -205,7 +205,7 @@
               from Euro Exchange USA:
             </p>
 
-            <ul>
+            <ul class="ms-5">
               <li>Affordable rates in South Florida</li>
               <li>Zero percent cut-in</li>
               <li>Superb customer care</li>
@@ -229,7 +229,7 @@
     <footer class="bg-light">
       <div class="container">
         <div class="row row-col-4 py-5 mt-5 border-top">
-          <div class="col-md-3 text-center">
+          <div class="col-md-3 text-start">
             <a
               href="index.html"
               class="d-flex align-items-center mb-3 link-dark text-decoration-none"
@@ -249,7 +249,7 @@
             <p class="text-muted">&copy; 2021</p>
           </div>
 
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-start">
             <h5>Where to find us</h5>
             <div class="col-md-12">
               <p>
@@ -273,9 +273,9 @@
             </div>
           </div>
 
-          <div class="col-md-2 text-center">
+          <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex justify-content-center">
+            <ul class="list-unstyled d-flex justify-content-start">
               <li class="ms-3">
                 <a
                   class="link-dark"
@@ -301,7 +301,7 @@
             </ul>
           </div>
 
-          <div class="col-md-2 text-center">
+          <div class="col-md-2 text-start">
             <h5>Section</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
