--- a/locations.html
+++ b/locations.html
@@ -20,16 +20,16 @@
   <body>
     <nav
       class="navbar fixed-top navbar-expand-lg navbar-dark bg-black"
-      style="--bs-bg-opacity: 0.5"
+      style="--bs-bg-opacity: 0.85"
     >
       <div
-        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2 border-bottom"
+        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3"
       >
         <a
           class="navbar-brand d-flex col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
           href="index.html"
         >
-          <img src="img/euro_logo.png" width="250px" alt="" />
+          <img src="img/euro_logo_white.png" width="250px" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -292,7 +292,7 @@
     <footer class="bg-light">
       <div class="container">
         <div class="row row-col-4 py-5 mt-5 border-top">
-          <div class="col-md-3 text-center">
+          <div class="col-md-3 text-start">
             <a
               href="index.html"
               class="d-flex align-items-center mb-3 link-dark text-decoration-none"
@@ -312,7 +312,7 @@
             <p class="text-muted">&copy; 2021</p>
           </div>
 
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-start">
             <h5>Where to find us</h5>
             <div class="col-md-12">
               <p>
@@ -336,9 +336,9 @@
             </div>
           </div>
 
-          <div class="col-md-2 text-center">
+          <div class="col-md-2 text-start">
             <h5>Follow us</h5>
-            <ul class="list-unstyled d-flex justify-content-center">
+            <ul class="list-unstyled d-flex justify-content-start">
               <li class="ms-3">
                 <a
                   class="link-dark"
@@ -364,7 +364,7 @@
             </ul>
           </div>
 
-          <div class="col-md-2 text-center">
+          <div class="col-md-2 text-start">
             <h5>Section</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
